fix: header flickering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-a {
+a,
+button {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
 }
